// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createJestConfigOverride default 1`] = `
{
  "files": [
    "jest.config.?(js|ts)",
  ],
  "overrideType": "eslint-config-galex/jest-config",
  "rules": {
    "import/no-default-export": "off",
  },
}
`;

exports[`createJestConfigOverride without jest 1`] = `null`;

exports[`createJestDomRules default 1`] = `
{
  "jest-dom/prefer-checked": "warn",
  "jest-dom/prefer-empty": "warn",
  "jest-dom/prefer-enabled-disabled": "warn",
  "jest-dom/prefer-focus": "warn",
  "jest-dom/prefer-in-document": "warn",
  "jest-dom/prefer-required": "warn",
  "jest-dom/prefer-to-have-attribute": "warn",
  "jest-dom/prefer-to-have-class": "warn",
  "jest-dom/prefer-to-have-style": "warn",
  "jest-dom/prefer-to-have-text-content": "warn",
  "jest-dom/prefer-to-have-value": "warn",
}
`;

exports[`createJestRules default 1`] = `
{
  "jest/consistent-test-it": "off",
  "jest/expect-expect": "off",
  "jest/lowercase-name": "off",
  "jest/max-expects": "off",
  "jest/max-nested-describe": "off",
  "jest/no-alias-methods": "off",
  "jest/no-commented-out-tests": "warn",
  "jest/no-conditional-expect": "error",
  "jest/no-conditional-in-test": "warn",
  "jest/no-deprecated-functions": "error",
  "jest/no-disabled-tests": "warn",
  "jest/no-done-callback": "error",
  "jest/no-duplicate-hooks": "warn",
  "jest/no-expect-resolves": "off",
  "jest/no-export": "error",
  "jest/no-focused-tests": "error",
  "jest/no-hooks": "off",
  "jest/no-identical-title": "error",
  "jest/no-interpolation-in-snapshots": "error",
  "jest/no-jasmine-globals": "error",
  "jest/no-large-snapshots": [
    "warn",
    {
      "maxSize": 300,
    },
  ],
  "jest/no-mocks-import": "error",
  "jest/no-restricted-matchers": "off",
  "jest/no-standalone-expect": "off",
  "jest/no-test-prefixes": "error",
  "jest/no-test-return-statement": "error",
  "jest/no-truthy-falsy": "off",
  "jest/no-try-expect": "off",
  "jest/prefer-called-with": "error",
  "jest/prefer-comparison-matcher": "warn",
  "jest/prefer-each": "warn",
  "jest/prefer-expect-assertions": "off",
  "jest/prefer-expect-resolves": "warn",
  "jest/prefer-hooks-in-order": "warn",
  "jest/prefer-hooks-on-top": "error",
  "jest/prefer-inline-snapshots": "off",
  "jest/prefer-snapshot-hint": "off",
  "jest/prefer-spy-on": "warn",
  "jest/prefer-strict-equal": "warn",
  "jest/prefer-to-be": "warn",
  "jest/prefer-to-contain": "warn",
  "jest/prefer-to-have-length": "warn",
  "jest/prefer-todo": "warn",
  "jest/require-to-throw-message": "off",
  "jest/require-top-level-describe": "off",
  "jest/valid-describe-callback": "error",
  "jest/valid-expect": "error",
  "jest/valid-expect-in-promise": "error",
  "jest/valid-title": "warn",
}
`;

exports[`createJestRules with create-react-app 1`] = `
{
  "env": {
    "jest": true,
  },
  "excludedFiles": undefined,
  "extends": [
    "plugin:jest-formatting/strict",
  ],
  "files": [
    "**/__tests__/**/*.[jt]s?(x)",
    "**/?(*.)+(spec|test).[jt]s?(x)",
  ],
  "globals": undefined,
  "overrideType": "eslint-config-galex/jest",
  "overrides": undefined,
  "parserOptions": {
    "ecmaVersion": 2020,
  },
  "plugins": [
    "jest",
  ],
  "rules": {
    "import/no-namespace": "off",
    "jest/consistent-test-it": "off",
    "jest/expect-expect": "off",
    "jest/lowercase-name": "off",
    "jest/max-expects": "off",
    "jest/max-nested-describe": "off",
    "jest/no-alias-methods": "off",
    "jest/no-commented-out-tests": "warn",
    "jest/no-conditional-expect": "error",
    "jest/no-conditional-in-test": "warn",
    "jest/no-deprecated-functions": "error",
    "jest/no-disabled-tests": "warn",
    "jest/no-done-callback": "error",
    "jest/no-duplicate-hooks": "warn",
    "jest/no-expect-resolves": "off",
    "jest/no-export": "error",
    "jest/no-focused-tests": "error",
    "jest/no-hooks": "off",
    "jest/no-identical-title": "error",
    "jest/no-interpolation-in-snapshots": "error",
    "jest/no-jasmine-globals": "error",
    "jest/no-large-snapshots": [
      "warn",
      {
        "maxSize": 300,
      },
    ],
    "jest/no-mocks-import": "error",
    "jest/no-restricted-matchers": "off",
    "jest/no-standalone-expect": "off",
    "jest/no-test-prefixes": "error",
    "jest/no-test-return-statement": "error",
    "jest/no-truthy-falsy": "off",
    "jest/no-try-expect": "off",
    "jest/prefer-called-with": "error",
    "jest/prefer-comparison-matcher": "warn",
    "jest/prefer-each": "warn",
    "jest/prefer-expect-assertions": "off",
    "jest/prefer-hooks-on-top": "error",
    "jest/prefer-inline-snapshots": "off",
    "jest/prefer-snapshot-hint": "off",
    "jest/prefer-spy-on": "warn",
    "jest/prefer-strict-equal": "warn",
    "jest/prefer-to-contain": "warn",
    "jest/prefer-to-have-length": "warn",
    "jest/prefer-todo": "warn",
    "jest/require-to-throw-message": "off",
    "jest/require-top-level-describe": "off",
    "jest/valid-expect": "error",
    "jest/valid-expect-in-promise": "error",
    "jest/valid-title": "warn",
    "jsx-a11y/control-has-associated-label": "off",
    "no-empty-function": "off",
    "no-param-reassign": "off",
    "react/button-has-type": "off",
    "require-unicode-regexp": "off",
    "sonarjs/no-duplicate-string": "off",
    "sonarjs/no-identical-functions": "off",
  },
  "settings": {
    "jest": {
      "version": "detect",
    },
  },
}
`;

exports[`createJestRules with typescript 1`] = `
{
  "env": {
    "jest": true,
  },
  "excludedFiles": undefined,
  "extends": [
    "plugin:jest-formatting/strict",
  ],
  "files": [
    "**/__tests__/**/*.[jt]s?(x)",
    "**/?(*.)+(spec|test).[jt]s?(x)",
  ],
  "globals": undefined,
  "overrideType": "eslint-config-galex/jest",
  "overrides": undefined,
  "parserOptions": {
    "ecmaVersion": 2020,
  },
  "plugins": [
    "jest",
  ],
  "rules": {
    "@typescript-eslint/explicit-member-accessibility": "off",
    "@typescript-eslint/no-empty-function": "off",
    "@typescript-eslint/no-non-null-assertion": "off",
    "@typescript-eslint/no-unsafe-argument": "off",
    "@typescript-eslint/unbound-method": "off",
    "import/no-namespace": "off",
    "jest/consistent-test-it": "off",
    "jest/expect-expect": "off",
    "jest/lowercase-name": "off",
    "jest/max-expects": "off",
    "jest/max-nested-describe": "off",
    "jest/no-alias-methods": "off",
    "jest/no-commented-out-tests": "warn",
    "jest/no-conditional-expect": "error",
    "jest/no-conditional-in-test": "warn",
    "jest/no-deprecated-functions": "error",
    "jest/no-disabled-tests": "warn",
    "jest/no-done-callback": "error",
    "jest/no-duplicate-hooks": "warn",
    "jest/no-expect-resolves": "off",
    "jest/no-export": "error",
    "jest/no-focused-tests": "error",
    "jest/no-hooks": "off",
    "jest/no-identical-title": "error",
    "jest/no-interpolation-in-snapshots": "error",
    "jest/no-jasmine-globals": "error",
    "jest/no-large-snapshots": [
      "warn",
      {
        "maxSize": 300,
      },
    ],
    "jest/no-mocks-import": "error",
    "jest/no-restricted-matchers": "off",
    "jest/no-standalone-expect": "off",
    "jest/no-test-prefixes": "error",
    "jest/no-test-return-statement": "error",
    "jest/no-truthy-falsy": "off",
    "jest/no-try-expect": "off",
    "jest/prefer-called-with": "error",
    "jest/prefer-comparison-matcher": "warn",
    "jest/prefer-each": "warn",
    "jest/prefer-expect-assertions": "off",
    "jest/prefer-expect-resolves": "warn",
    "jest/prefer-hooks-in-order": "warn",
    "jest/prefer-hooks-on-top": "error",
    "jest/prefer-inline-snapshots": "off",
    "jest/prefer-snapshot-hint": "off",
    "jest/prefer-spy-on": "warn",
    "jest/prefer-strict-equal": "warn",
    "jest/prefer-to-be": "warn",
    "jest/prefer-to-contain": "warn",
    "jest/prefer-to-have-length": "warn",
    "jest/prefer-todo": "warn",
    "jest/require-to-throw-message": "off",
    "jest/require-top-level-describe": "off",
    "jest/unbound-method": "warn",
    "jest/valid-describe-callback": "error",
    "jest/valid-expect": "error",
    "jest/valid-expect-in-promise": "error",
    "jest/valid-title": "off",
    "no-empty-function": "off",
    "no-param-reassign": "off",
    "require-unicode-regexp": "off",
    "sonarjs/no-duplicate-string": "off",
    "sonarjs/no-identical-functions": "off",
  },
  "settings": {
    "jest": {
      "version": "detect",
    },
  },
}
`;

exports[`createTestOverrides with react 1`] = `
{
  "import/no-namespace": "off",
  "jsx-a11y/control-has-associated-label": "off",
  "no-empty-function": "off",
  "no-param-reassign": "off",
  "react/button-has-type": "off",
  "require-unicode-regexp": "off",
  "sonarjs/no-duplicate-string": "off",
  "sonarjs/no-identical-functions": "off",
}
`;

exports[`createTestOverrides with typescript 1`] = `
{
  "@typescript-eslint/explicit-member-accessibility": "off",
  "@typescript-eslint/no-empty-function": "off",
  "@typescript-eslint/no-non-null-assertion": "off",
  "@typescript-eslint/no-unsafe-argument": "off",
  "@typescript-eslint/unbound-method": "off",
  "import/no-namespace": "off",
  "jest/unbound-method": "warn",
  "no-empty-function": "off",
  "no-param-reassign": "off",
  "require-unicode-regexp": "off",
  "sonarjs/no-duplicate-string": "off",
  "sonarjs/no-identical-functions": "off",
}
`;

exports[`createTestingLibraryRules with CRA 1`] = `
{
  "testing-library/await-async-query": "error",
  "testing-library/await-async-utils": "error",
  "testing-library/await-fire-event": "off",
  "testing-library/consistent-data-testid": "off",
  "testing-library/no-await-sync-events": "error",
  "testing-library/no-await-sync-query": "error",
  "testing-library/no-container": "warn",
  "testing-library/no-debugging-utils": "error",
  "testing-library/no-dom-import": [
    "warn",
    "react",
  ],
  "testing-library/no-manual-cleanup": "error",
  "testing-library/no-node-access": "warn",
  "testing-library/no-promise-in-fire-event": "error",
  "testing-library/no-render-in-setup": "off",
  "testing-library/no-unnecessary-act": [
    "error",
    {
      "isStrict": true,
    },
  ],
  "testing-library/no-wait-for-empty-callback": "error",
  "testing-library/no-wait-for-multiple-assertions": "error",
  "testing-library/no-wait-for-side-effects": "error",
  "testing-library/no-wait-for-snapshot": "error",
  "testing-library/prefer-explicit-assert": "warn",
  "testing-library/prefer-find-by": "warn",
  "testing-library/prefer-presence-queries": "error",
  "testing-library/prefer-query-by-disappearance": "error",
  "testing-library/prefer-screen-queries": "error",
  "testing-library/prefer-user-event": "warn",
  "testing-library/prefer-wait-for": "warn",
  "testing-library/render-result-naming-convention": "off",
}
`;

exports[`createTestingLibraryRules with react 1`] = `
{
  "testing-library/await-async-query": "error",
  "testing-library/await-async-utils": "error",
  "testing-library/await-fire-event": "off",
  "testing-library/consistent-data-testid": "off",
  "testing-library/no-await-sync-events": "error",
  "testing-library/no-await-sync-query": "error",
  "testing-library/no-container": "warn",
  "testing-library/no-debugging-utils": "error",
  "testing-library/no-dom-import": [
    "warn",
    "react",
  ],
  "testing-library/no-global-regexp-flag-in-query": "warn",
  "testing-library/no-manual-cleanup": "error",
  "testing-library/no-node-access": "warn",
  "testing-library/no-promise-in-fire-event": "error",
  "testing-library/no-render-in-setup": "off",
  "testing-library/no-unnecessary-act": [
    "error",
    {
      "isStrict": true,
    },
  ],
  "testing-library/no-wait-for-empty-callback": "error",
  "testing-library/no-wait-for-multiple-assertions": "error",
  "testing-library/no-wait-for-side-effects": "error",
  "testing-library/no-wait-for-snapshot": "error",
  "testing-library/prefer-explicit-assert": "warn",
  "testing-library/prefer-find-by": "warn",
  "testing-library/prefer-presence-queries": "error",
  "testing-library/prefer-query-by-disappearance": "error",
  "testing-library/prefer-screen-queries": "error",
  "testing-library/prefer-user-event": "warn",
  "testing-library/prefer-wait-for": "warn",
  "testing-library/render-result-naming-convention": "off",
}
`;

exports[`createTestingLibrarySettings with react and testing-lib 1`] = `
{
  "testing-library/custom-renders": [
    "renderToStaticMarkup",
  ],
}
`;

exports[`createTestingLibrarySettings with react, nextjs and testing-lib 1`] = `
{
  "testing-library/custom-renders": [
    "renderToStaticMarkup",
    "renderDocument",
  ],
}
`;

exports[`override snapshots with jest-dom 1`] = `
{
  "env": {
    "jest": true,
  },
  "excludedFiles": undefined,
  "extends": [
    "plugin:jest-formatting/strict",
  ],
  "files": [
    "**/__tests__/**/*.[jt]s?(x)",
    "**/?(*.)+(spec|test).[jt]s?(x)",
  ],
  "globals": undefined,
  "overrideType": "eslint-config-galex/jest",
  "overrides": undefined,
  "parserOptions": {
    "ecmaVersion": 2020,
  },
  "plugins": [
    "jest",
    "jest-dom",
  ],
  "rules": {
    "import/no-namespace": "off",
    "jest-dom/prefer-checked": "warn",
    "jest-dom/prefer-empty": "warn",
    "jest-dom/prefer-enabled-disabled": "warn",
    "jest-dom/prefer-focus": "warn",
    "jest-dom/prefer-in-document": "warn",
    "jest-dom/prefer-required": "warn",
    "jest-dom/prefer-to-have-attribute": "warn",
    "jest-dom/prefer-to-have-class": "warn",
    "jest-dom/prefer-to-have-style": "warn",
    "jest-dom/prefer-to-have-text-content": "warn",
    "jest-dom/prefer-to-have-value": "warn",
    "jest/consistent-test-it": "off",
    "jest/expect-expect": "off",
    "jest/lowercase-name": "off",
    "jest/max-expects": "off",
    "jest/max-nested-describe": "off",
    "jest/no-alias-methods": "off",
    "jest/no-commented-out-tests": "warn",
    "jest/no-conditional-expect": "error",
    "jest/no-conditional-in-test": "warn",
    "jest/no-deprecated-functions": "error",
    "jest/no-disabled-tests": "warn",
    "jest/no-done-callback": "error",
    "jest/no-duplicate-hooks": "warn",
    "jest/no-expect-resolves": "off",
    "jest/no-export": "error",
    "jest/no-focused-tests": "error",
    "jest/no-hooks": "off",
    "jest/no-identical-title": "error",
    "jest/no-interpolation-in-snapshots": "error",
    "jest/no-jasmine-globals": "error",
    "jest/no-large-snapshots": [
      "warn",
      {
        "maxSize": 300,
      },
    ],
    "jest/no-mocks-import": "error",
    "jest/no-restricted-matchers": "off",
    "jest/no-standalone-expect": "off",
    "jest/no-test-prefixes": "error",
    "jest/no-test-return-statement": "error",
    "jest/no-truthy-falsy": "off",
    "jest/no-try-expect": "off",
    "jest/prefer-called-with": "error",
    "jest/prefer-comparison-matcher": "warn",
    "jest/prefer-each": "warn",
    "jest/prefer-expect-assertions": "off",
    "jest/prefer-expect-resolves": "warn",
    "jest/prefer-hooks-in-order": "warn",
    "jest/prefer-hooks-on-top": "error",
    "jest/prefer-inline-snapshots": "off",
    "jest/prefer-snapshot-hint": "off",
    "jest/prefer-spy-on": "warn",
    "jest/prefer-strict-equal": "warn",
    "jest/prefer-to-be": "warn",
    "jest/prefer-to-contain": "warn",
    "jest/prefer-to-have-length": "warn",
    "jest/prefer-todo": "warn",
    "jest/require-to-throw-message": "off",
    "jest/require-top-level-describe": "off",
    "jest/valid-describe-callback": "error",
    "jest/valid-expect": "error",
    "jest/valid-expect-in-promise": "error",
    "jest/valid-title": "warn",
    "no-empty-function": "off",
    "no-param-reassign": "off",
    "require-unicode-regexp": "off",
    "sonarjs/no-duplicate-string": "off",
    "sonarjs/no-identical-functions": "off",
  },
  "settings": {
    "jest": {
      "version": "detect",
    },
  },
}
`;

exports[`override snapshots with testing-lib 1`] = `
{
  "env": {
    "jest": true,
  },
  "excludedFiles": undefined,
  "extends": [
    "plugin:jest-formatting/strict",
  ],
  "files": [
    "**/__tests__/**/*.[jt]s?(x)",
    "**/?(*.)+(spec|test).[jt]s?(x)",
  ],
  "globals": undefined,
  "overrideType": "eslint-config-galex/jest",
  "overrides": undefined,
  "parserOptions": {
    "ecmaVersion": 2020,
  },
  "plugins": [
    "jest",
    "testing-library",
  ],
  "rules": {
    "import/no-namespace": "off",
    "jest/consistent-test-it": "off",
    "jest/expect-expect": "off",
    "jest/lowercase-name": "off",
    "jest/max-expects": "off",
    "jest/max-nested-describe": "off",
    "jest/no-alias-methods": "off",
    "jest/no-commented-out-tests": "warn",
    "jest/no-conditional-expect": "error",
    "jest/no-conditional-in-test": "warn",
    "jest/no-deprecated-functions": "error",
    "jest/no-disabled-tests": "warn",
    "jest/no-done-callback": "error",
    "jest/no-duplicate-hooks": "warn",
    "jest/no-expect-resolves": "off",
    "jest/no-export": "error",
    "jest/no-focused-tests": "error",
    "jest/no-hooks": "off",
    "jest/no-identical-title": "error",
    "jest/no-interpolation-in-snapshots": "error",
    "jest/no-jasmine-globals": "error",
    "jest/no-large-snapshots": [
      "warn",
      {
        "maxSize": 300,
      },
    ],
    "jest/no-mocks-import": "error",
    "jest/no-restricted-matchers": "off",
    "jest/no-standalone-expect": "off",
    "jest/no-test-prefixes": "error",
    "jest/no-test-return-statement": "error",
    "jest/no-truthy-falsy": "off",
    "jest/no-try-expect": "off",
    "jest/prefer-called-with": "error",
    "jest/prefer-comparison-matcher": "warn",
    "jest/prefer-each": "warn",
    "jest/prefer-expect-assertions": "off",
    "jest/prefer-expect-resolves": "warn",
    "jest/prefer-hooks-in-order": "warn",
    "jest/prefer-hooks-on-top": "error",
    "jest/prefer-inline-snapshots": "off",
    "jest/prefer-snapshot-hint": "off",
    "jest/prefer-spy-on": "warn",
    "jest/prefer-strict-equal": "warn",
    "jest/prefer-to-be": "warn",
    "jest/prefer-to-contain": "warn",
    "jest/prefer-to-have-length": "warn",
    "jest/prefer-todo": "warn",
    "jest/require-to-throw-message": "off",
    "jest/require-top-level-describe": "off",
    "jest/valid-describe-callback": "error",
    "jest/valid-expect": "error",
    "jest/valid-expect-in-promise": "error",
    "jest/valid-title": "warn",
    "no-empty-function": "off",
    "no-param-reassign": "off",
    "require-unicode-regexp": "off",
    "sonarjs/no-duplicate-string": "off",
    "sonarjs/no-identical-functions": "off",
    "testing-library/await-async-query": "error",
    "testing-library/await-async-utils": "error",
    "testing-library/await-fire-event": "off",
    "testing-library/consistent-data-testid": "off",
    "testing-library/no-await-sync-events": "error",
    "testing-library/no-await-sync-query": "error",
    "testing-library/no-container": "warn",
    "testing-library/no-debugging-utils": "error",
    "testing-library/no-dom-import": "off",
    "testing-library/no-global-regexp-flag-in-query": "warn",
    "testing-library/no-manual-cleanup": "error",
    "testing-library/no-node-access": "warn",
    "testing-library/no-promise-in-fire-event": "error",
    "testing-library/no-render-in-setup": "off",
    "testing-library/no-unnecessary-act": [
      "error",
      {
        "isStrict": true,
      },
    ],
    "testing-library/no-wait-for-empty-callback": "error",
    "testing-library/no-wait-for-multiple-assertions": "error",
    "testing-library/no-wait-for-side-effects": "error",
    "testing-library/no-wait-for-snapshot": "error",
    "testing-library/prefer-explicit-assert": "warn",
    "testing-library/prefer-find-by": "warn",
    "testing-library/prefer-presence-queries": "error",
    "testing-library/prefer-query-by-disappearance": "error",
    "testing-library/prefer-screen-queries": "error",
    "testing-library/prefer-user-event": "warn",
    "testing-library/prefer-wait-for": "warn",
    "testing-library/render-result-naming-convention": "off",
  },
  "settings": {
    "jest": {
      "version": "detect",
    },
  },
}
`;

exports[`override snapshots without jest 1`] = `null`;
